[gd_scene load_steps=41 format=3 uid="uid://dya7qxd1tr3gq"]

[ext_resource type="PackedScene" uid="uid://druq273210d8b" path="res://scenes/sections/tile_map.tscn" id="1_04kq6"]
[ext_resource type="PackedScene" uid="uid://cqvnliqs7mvfe" path="res://scenes/sections/background.tscn" id="2_dr1mk"]
[ext_resource type="PackedScene" uid="uid://c8a3uhby50eog" path="res://scenes/menus/dust_particles.tscn" id="4_6h5e2"]
[ext_resource type="PackedScene" uid="uid://jldit7o8sh0p" path="res://scenes/menus/death_warning.tscn" id="4_c4x3i"]
[ext_resource type="PackedScene" uid="uid://lmt4yjrdw8kk" path="res://scenes/player.tscn" id="5_7wutl"]
[ext_resource type="PackedScene" uid="uid://cydsd27rpksoo" path="res://scenes/sections/decorations.tscn" id="6_pgmhg"]
[ext_resource type="Script" path="res://scripts/menus/settings_area.gd" id="7_fkrux"]
[ext_resource type="PackedScene" uid="uid://fikthwf1ruin" path="res://scenes/section_line.tscn" id="7_grw8f"]
[ext_resource type="Texture2D" uid="uid://byv2pkaaf2v5t" path="res://assets/Tilemap/monochrome_tilemap_transparent_packed.png" id="7_okl05"]
[ext_resource type="Script" path="res://scripts/menus/game_start_area.gd" id="7_xgp62"]
[ext_resource type="Script" path="res://scripts/menus/quit_area.gd" id="8_1losw"]
[ext_resource type="PackedScene" uid="uid://cbc5jyuaxunxf" path="res://scenes/death_area.tscn" id="10_5im2o"]
[ext_resource type="PackedScene" uid="uid://b5l843x4m6sg4" path="res://scenes/menus/settings_menu/settings.tscn" id="10_6vku2"]
[ext_resource type="PackedScene" uid="uid://gvrle5ugsl27" path="res://scenes/menus/quit_popup.tscn" id="11_6xmeh"]
[ext_resource type="PackedScene" uid="uid://cnhg6812dokbu" path="res://scenes/managers/game_controller.tscn" id="13_mxqul"]
[ext_resource type="PackedScene" uid="uid://b0d6kta8yhr0b" path="res://scenes/sections/levels/section1.tscn" id="14_bp0m6"]
[ext_resource type="PackedScene" uid="uid://cjaivf8n4ryih" path="res://scenes/sections/levels/section2.tscn" id="15_kdhey"]
[ext_resource type="PackedScene" uid="uid://knp1mam5e562" path="res://scenes/sections/levels/section3.tscn" id="16_m2xuj"]
[ext_resource type="PackedScene" uid="uid://dth60ajlkx5i1" path="res://scenes/sections/levels/section4.tscn" id="17_4jwrd"]
[ext_resource type="PackedScene" uid="uid://bl2oc40fr2mag" path="res://scenes/sections/levels/section5.tscn" id="18_3pg6p"]
[ext_resource type="PackedScene" uid="uid://d2mbt6g0fg3oo" path="res://scenes/sections/levels/section6.tscn" id="19_1cbgp"]
[ext_resource type="PackedScene" uid="uid://scvobgbx8jgm" path="res://scenes/sections/levels/section7.tscn" id="20_ei2g1"]
[ext_resource type="PackedScene" uid="uid://caikanws4v5aq" path="res://scenes/sections/levels/section8.tscn" id="21_2odth"]
[ext_resource type="PackedScene" uid="uid://dbivxjyojhhfy" path="res://scenes/sections/levels/section9.tscn" id="22_x2cpa"]
[ext_resource type="PackedScene" uid="uid://dqm5clbjx71q" path="res://scenes/sections/levels/section10.tscn" id="23_w21sg"]
[ext_resource type="PackedScene" uid="uid://c5ug1hkicbgyy" path="res://scenes/sections/levels/section11.tscn" id="24_rkorq"]
[ext_resource type="PackedScene" uid="uid://dfmlrfr2clkxu" path="res://scenes/sections/levels/section12.tscn" id="25_l3ds6"]
[ext_resource type="PackedScene" uid="uid://da8vapsn1joqw" path="res://scenes/sections/levels/section13.tscn" id="26_2ycy3"]
[ext_resource type="PackedScene" uid="uid://b2h6sicmksnue" path="res://scenes/sections/levels/section14.tscn" id="27_krarm"]
[ext_resource type="PackedScene" uid="uid://pkyto6ksnufj" path="res://scenes/sections/levels/section15.tscn" id="28_yshjn"]
[ext_resource type="PackedScene" uid="uid://bqck8rk8hujhh" path="res://scenes/moving_platform.tscn" id="29_fj62h"]
[ext_resource type="PackedScene" uid="uid://ckaeu18ux3mw1" path="res://scenes/menus/highscore_ui_sign.tscn" id="32_771yv"]
[ext_resource type="PackedScene" uid="uid://dtvlmeppcinkd" path="res://scenes/menus/info_sign.tscn" id="32_ogyav"]
[ext_resource type="PackedScene" uid="uid://cx7qlh0o3clg0" path="res://scenes/menus/controls.tscn" id="33_x7xa7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_msvqj"]
size = Vector2(404, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m7jhl"]
size = Vector2(289, 20)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xavad"]
texture = ExtResource("7_okl05")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
19:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0

[sub_resource type="TileSet" id="TileSet_llwky"]
sources/0 = SubResource("TileSetAtlasSource_xavad")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gxrhv"]
size = Vector2(62, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mcvy8"]
size = Vector2(49, 18)

[node name="World" type="Node2D"]
metadata/_edit_horizontal_guides_ = [120.0]
metadata/_edit_vertical_guides_ = [159.0, 482.0]

[node name="TileMap" parent="." instance=ExtResource("1_04kq6")]
layer_0/tile_data = PackedInt32Array(1900569, 720896, 6, 1835033, 720896, 5, 1900568, 720896, 6, 1835032, 720896, 5, 1900567, 720896, 6, 1835031, 720896, 5, 1900566, 720896, 6, 1835030, 720896, 5, 1900565, 720896, 6, 1835029, 720896, 5, 1900564, 720896, 6, 1835028, 720896, 5, 1900563, 720896, 6, 1835027, 720896, 5, 1900562, 720896, 6, 1835026, 720896, 5, 1900561, 720896, 6, 1835025, 720896, 5, 1900560, 720896, 6, 1835024, 720896, 5, 1900559, 720896, 6, 1835023, 720896, 5, 1900558, 720896, 6, 1835022, 720896, 5, 1900571, 720896, 6, 1835035, 720896, 5, 1900570, 720896, 6, 1835034, 720896, 5, 1900557, 720896, 6, 1835021, 720896, 5, 1900556, 720896, 6, 1835020, 720896, 5, 1900573, 720896, 6, 1835037, 720896, 6, 1900572, 720896, 6, 1835036, 720896, 5, 1900555, 720896, 6, 1835019, 720896, 5, 1900554, 720896, 6, 1835018, 720896, 6, 1769482, 786432, 6, 1703946, 786432, 6, 1638410, 786432, 6, 1572874, 786432, 6, 1507338, 786432, 6, 1441802, 786432, 6, 1376266, 786432, 6, 1310730, 786432, 6, 1245194, 786432, 6, 1179658, 786432, 6, 1114122, 786432, 6, 1048586, 786432, 6, 983050, 786432, 6, 1900553, 655360, 6, 1835017, 655360, 6, 1769481, 655360, 6, 1703945, 655360, 6, 1638409, 655360, 6, 1572873, 655360, 6, 1507337, 655360, 6, 1441801, 655360, 6, 1376265, 655360, 6, 1310729, 655360, 6, 1245193, 655360, 6, 1179657, 655360, 6, 1114121, 655360, 6, 1048585, 655360, 6, 983049, 655360, 6, 1835038, 786432, 6, 1769502, 786432, 6, 1703966, 786432, 6, 1638430, 786432, 6, 1572894, 786432, 6, 1507358, 786432, 6, 1441822, 786432, 6, 1376286, 786432, 6, 1310750, 786432, 6, 1245214, 786432, 6, 1179678, 786432, 6, 1114142, 786432, 6, 1048606, 786432, 6, 983070, 786432, 6, 1769501, 655360, 6, 1703965, 655360, 6, 1638429, 655360, 6, 1572893, 655360, 6, 1507357, 655360, 6, 1441821, 655360, 6, 1376285, 655360, 6, 1310749, 720896, 6, 1245213, 720896, 6, 1179677, 720896, 6, 1114141, 655360, 6, 1048605, 655360, 6, 983069, 655360, 6, 1900574, 786432, 6, 917514, 720896, 6, 917513, 655360, 6, 917534, 786432, 6, 917533, 720896, 6, 1966110, 786432, 7, 1966109, 720896, 7, 1966108, 720896, 7, 1966107, 720896, 7, 1966106, 720896, 7, 1966105, 720896, 7, 1966104, 720896, 7, 1966103, 720896, 7, 1966102, 720896, 7, 1966101, 720896, 7, 1966100, 720896, 7, 1966099, 720896, 7, 1966098, 720896, 7, 1966097, 720896, 7, 1966096, 720896, 7, 1966095, 720896, 7, 1966094, 720896, 7, 1966093, 720896, 7, 1966092, 720896, 7, 1966091, 720896, 7, 1966090, 720896, 7, 1966089, 655360, 7, 917516, 786432, 7, 917515, 720896, 7, 851980, 786432, 5, 851979, 720896, 5, 851978, 720896, 5, 851977, 655360, 5, 851998, 786432, 5, 851997, 720896, 5, 917532, 720896, 7, 851996, 720896, 5, 917531, 655360, 7, 851995, 655360, 5, 1376283, 786432, 7, 1376282, 720896, 7, 1376278, 786432, 7, 1376277, 720896, 7, 1376276, 720896, 7, 1179668, 720896, 5, 1245204, 720896, 6, 1310740, 720896, 6, 1179669, 720896, 5, 1245205, 720896, 6, 1310741, 720896, 6, 1179670, 720896, 5, 1245206, 720896, 6, 1310742, 720896, 6, 1179671, 720896, 5, 1245207, 720896, 6, 1310743, 720896, 7, 1179672, 720896, 5, 1245208, 720896, 6, 1310744, 720896, 7, 1179673, 720896, 5, 1245209, 720896, 6, 1310745, 720896, 6, 1179674, 720896, 5, 1245210, 720896, 6, 1310746, 720896, 6, 1179675, 720896, 5, 1245211, 720896, 6, 1310747, 720896, 6, 1376275, 655360, 7, 1310739, 655360, 6, 1245203, 655360, 6, 1179667, 655360, 5, 1376281, 655360, 7, 1179676, 720896, 5, 1245212, 720896, 6, 1310748, 720896, 7)

[node name="Background" parent="." instance=ExtResource("2_dr1mk")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 360)
enabled = false
zoom = Vector2(2, 2)
limit_bottom = 480
limit_smoothed = true
position_smoothing_enabled = true
drag_vertical_enabled = true

[node name="DustParticles" parent="Camera2D" instance=ExtResource("4_6h5e2")]
position = Vector2(-320, -360)

[node name="Decorations" parent="." instance=ExtResource("6_pgmhg")]
layer_0/tile_data = PackedInt32Array(1769485, 1179648, 1, 1769487, 1179648, 1, 1769488, 1114112, 1, 1769496, 1114112, 1, 1769500, 1114112, 0, 1769498, 1114112, 1, 1114132, 1048576, 1, 1114133, 983040, 2, 1703948, 983040, 1, 1769484, 983040, 2, 1638412, 917504, 3, 1048597, 983040, 1, 983061, 917504, 3, 1114136, 1114112, 0, 1114137, 1179648, 1, 1114139, 1114112, 1, 1769493, 1179648, 1, 1441812, 1245184, 0, 1507348, 1245184, 1, 1441814, 1245184, 0, 1507350, 1245184, 0, 1572886, 1245184, 1, 1441818, 1245184, 0, 1507354, 1245184, 1, 983052, 1245184, 0, 1048588, 1245184, 0, 1179660, 1245184, 0, 1114124, 1245184, 0, 1245196, 1245184, 1)

[node name="Title" type="Label" parent="."]
offset_left = 323.0
offset_top = 299.0
offset_right = 451.0
offset_bottom = 330.0
theme_override_font_sizes/font_size = 16
text = "Rapid Weaver"
horizontal_alignment = 1

[node name="GameStartArea" type="Area2D" parent="."]
collision_mask = 4
script = ExtResource("7_xgp62")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameStartArea"]
position = Vector2(321, 224)
shape = SubResource("RectangleShape2D_msvqj")

[node name="SectionLine" parent="GameStartArea" instance=ExtResource("7_grw8f")]
position = Vector2(0, 225)
can_score = false

[node name="Platform" type="StaticBody2D" parent="GameStartArea"]
visible = false
collision_layer = 0

[node name="Platform" type="CollisionShape2D" parent="GameStartArea/Platform"]
position = Vector2(320.5, 250)
shape = SubResource("RectangleShape2D_m7jhl")

[node name="TileMap" type="TileMap" parent="GameStartArea/Platform"]
tile_set = SubResource("TileSet_llwky")
format = 2
layer_0/tile_data = PackedInt32Array(983051, 0, 9, 983052, 65536, 9, 983053, 65536, 9, 983054, 65536, 9, 983055, 65536, 9, 983056, 65536, 9, 983057, 65536, 9, 983058, 65536, 9, 983059, 65536, 9, 983060, 65536, 9, 983061, 65536, 9, 983062, 65536, 9, 983063, 65536, 9, 983064, 65536, 9, 983065, 65536, 9, 983066, 65536, 9, 983067, 65536, 9, 983068, 131072, 9)

[node name="SettingsArea" type="Area2D" parent="."]
position = Vector2(320, 345)
collision_mask = 20
script = ExtResource("7_fkrux")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SettingsArea"]
position = Vector2(18, -3)
shape = SubResource("RectangleShape2D_gxrhv")

[node name="Settings" parent="SettingsArea" instance=ExtResource("10_6vku2")]

[node name="SettingsLabel" type="Label" parent="SettingsArea"]
offset_left = -55.0
offset_top = -11.0
offset_right = 89.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 8
text = "Settings"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="SettingsArea"]
visible = false
offset_left = -16.0
offset_top = -12.0
offset_right = 48.0
offset_bottom = 4.0
color = Color(1, 1, 1, 0.176471)

[node name="QuitArea" type="Area2D" parent="."]
position = Vector2(413, 343)
collision_mask = 20
script = ExtResource("8_1losw")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="QuitArea"]
position = Vector2(10.5, -1)
shape = SubResource("RectangleShape2D_mcvy8")

[node name="PopupPanel" parent="QuitArea" instance=ExtResource("11_6xmeh")]

[node name="QuitLabel" type="Label" parent="QuitArea"]
offset_left = -61.0
offset_top = -8.0
offset_right = 83.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 8
text = "Quit"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="QuitArea"]
visible = false
offset_left = -13.0
offset_top = -10.0
offset_right = 35.0
offset_bottom = 6.0
color = Color(1, 1, 1, 0.176471)

[node name="Sections" type="Node2D" parent="."]

[node name="DeathArea" parent="." instance=ExtResource("10_5im2o")]
position = Vector2(0, 537)
collision_mask = 4

[node name="GameController" parent="." node_paths=PackedStringArray("camera", "death_area", "death_warning") instance=ExtResource("13_mxqul")]
camera = NodePath("../Camera2D")
enable_following_camera = true
camera_speed = 35.0
death_area = NodePath("../DeathArea")
death_warning = NodePath("../DeathWarning")
sections = Array[PackedScene]([ExtResource("14_bp0m6"), ExtResource("15_kdhey"), ExtResource("16_m2xuj"), ExtResource("17_4jwrd"), ExtResource("18_3pg6p"), ExtResource("19_1cbgp"), ExtResource("20_ei2g1"), ExtResource("21_2odth"), ExtResource("22_x2cpa"), ExtResource("23_w21sg"), ExtResource("24_rkorq"), ExtResource("25_l3ds6"), ExtResource("26_2ycy3"), ExtResource("27_krarm"), ExtResource("28_yshjn")])

[node name="MovingPlatform" parent="." instance=ExtResource("29_fj62h")]
position = Vector2(245, 338)
distance = Vector2(2.08165e-12, 80)
phase_time = 12.0
debug = false

[node name="ControlsSign" parent="." instance=ExtResource("32_ogyav")]
position = Vector2(321, 438)
sign_hover_text = "Controls"
sign_display_scene = ExtResource("33_x7xa7")

[node name="HighscoreSign" parent="." instance=ExtResource("32_ogyav")]
position = Vector2(424, 278)
sign_hover_text = "Highscore"
sign_display_scene = ExtResource("32_771yv")

[node name="DeathWarning" parent="." instance=ExtResource("4_c4x3i")]

[node name="Player" parent="." instance=ExtResource("5_7wutl")]
position = Vector2(321, 368)
max_speed = 120.0
jump_time_to_peak = 0.2
jump_time_to_descent = 0.3
web_travelling_speed = 700.0
knockback_force = Vector2(300, 150)

[connection signal="body_exited" from="GameStartArea" to="GameStartArea" method="_on_body_exited"]
[connection signal="body_entered" from="SettingsArea" to="SettingsArea" method="_on_body_entered"]
[connection signal="mouse_entered" from="SettingsArea" to="SettingsArea" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="SettingsArea" to="SettingsArea" method="_on_mouse_exited"]
[connection signal="popup_hide" from="SettingsArea/Settings" to="SettingsArea" method="_on_settings_popup_hide"]
[connection signal="body_entered" from="QuitArea" to="QuitArea" method="_on_body_entered"]
[connection signal="mouse_entered" from="QuitArea" to="QuitArea" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="QuitArea" to="QuitArea" method="_on_mouse_exited"]
[connection signal="popup_hide" from="QuitArea/PopupPanel" to="QuitArea" method="_on_popup_panel_popup_hide"]
